--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- style css -->
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/21567ea30d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -51,8 +52,24 @@
                     <div class="carousel-item">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                     </div>
+                    <div class="carousel-caption pb-5 mb-5">
+                        <div>
+                            <h1>Get Started Digital <br> Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the readable<br>
+                                content of a page when looking at its layout.</p>
+                        </div>
+                        <button type="button" class="btn btn-primary px-4 py-2 text-white fw-bold">Get Started</button>
+                    </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-caption pb-5 mb-5">
+                        <div>
+                            <h1>Get Started Digital <br> Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the readable<br>
+                                content of a page when looking at its layout.</p>
+                        </div>
+                        <button type="button" class="btn btn-primary px-4 py-2 text-white fw-bold">Get Started</button>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -76,8 +93,8 @@
                 content of a page when looking at its layout.</p>
         </div>
         <section class="container">
-            <div class="course-add">
-                <div class="card mb-3" style="max-width: 545px;">
+            <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2">
+                <div class="card mb-3 me-4" style="max-width: 545px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
@@ -92,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3" style="max-width: 545px;">
+                <div class="card mb-3 me-4" style="max-width: 545px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
@@ -107,7 +124,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3" style="max-width: 545px;">
+                <div class="card mb-3 me-4" style="max-width: 545px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
@@ -122,7 +139,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3" style="max-width: 545px;">
+                <div class="card mb-3 me-4" style="max-width: 545px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
@@ -137,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3" style="max-width: 545px;">
+                <div class="card mb-3 me-4" style="max-width: 545px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
@@ -152,7 +169,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3" style="max-width: 545px;">
+                <div class="card mb-3 me-4" style="max-width: 545px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
@@ -168,8 +185,138 @@
                     </div>
                 </div>
             </div>
+            <div class="d-flex justify-content-center pt-3">
+                <a class="btn btn-primary px-4 py-2 fw-semibold" href="#" role="button">See More Courses</a>
+            </div>
+        </section>
+        <section style="height:300px">
+            <div class="container pt-5 pb-5">
+                <div class="h-100 py-5 bg-primary d-flex justify-content-around align-items-center  rounded-3">
+                    <div class="text-white">
+                        <h2 class="mb-4">Ready to join?</h2>
+                        <p>It is a long established fact that a reader will be distracted by the<br> readable content of
+                            a
+                            page
+                            when looking at its layout</p>
+
+                    </div>
+
+                    <button type="button"
+                        class="btn btn-outline-primary bg-white text-primary fw-semibold px-4 py-2 ">Register
+                        Now</button>
+
+
+                </div>
+            </div>
+        </section>
+        <section class="cintainer-fluid">
+            <div class="py-5 row row-cols-1">
+                <div class="text-center pb-3">
+                    <h2>Frequently Asked Questions</h2>
+                    <p>It is a long established fact that a reader will be distracted by the<br>readable
+                        content of a page when looking at its layout</p>
+                </div>
+                <div class="container" style="width:792px; height:400px;">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    What is the difference between flexbox and grid?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox
+                                    can work on either row or columns at a time, but Grids can work on both. Flexbox,
+                                    gives you more flexibility while working on either element (row or column). HTML
+                                    markup and CSS will be easy to manage in this type of scenario.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    What is the difference between tailwind and bootstrap?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive,
+                                    mobile first projects on the web. On the other hand, Tailwind CSS is detailed as "A
+                                    utility-first CSS framework for rapid UI development".
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What is css box model?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    The CSS box model is a container that contains multiple properties including
+                                    borders, margin, padding, and the content itself. It is used to create the design
+                                    and layout of web pages. It can be used as a toolkit for customizing the layout of
+                                    different elements. The web browser renders every element as a rectangular box
+                                    according to the CSS box model. Box-Model has multiple properties in CSS.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What is a semantic tag?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    The HTML semantics refers to the tags that provide meaning to an HTML page rather
+                                    than just presentation. It makes HTML more comprehensible by better defining the
+                                    different sections and layout of web pages.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+
+            <div class="text-center g-4 mb-5 d-none d-lg-block d-xl-block">
+                <div class="text-center mb-3">
+                    <h2>Trusted by over 800+ companies</h2>
+                </div>
+                <img class="img-fluid pe-3" src="images/company/company-1.png" alt="">
+                <img class="img-fluid pe-3" src="images/company/company-2.png" alt="">
+                <img class="img-fluid pe-3" src="images/company/company-3.png" alt="">
+                <img class="img-fluid pe-3" src="images/company/company-4.png" alt="">
+                <img class="img-fluid pe-3" src="images/company/company-5.png" alt="">
+                <img class="img-fluid pe-3" src="images/company/company-6.png" alt="">
+            </div>
         </section>
     </main>
+    <footer>
+        <div class="text-center bg-black py-5 text-white">
+            <h2>Pro Edu</h2>
+            <p>Office 41, Zawaya Buildin, Ghala Muscat, <br>
+
+                Sultanate of Oman<br>Privacy Ploicy | Terms of us</p>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-tiktok"></i></a>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
